--- a/backend/消息通知类型模板.md
+++ b/backend/消息通知类型模板.md
@@ -35,8 +35,8 @@ Image image 类型：
 +
 Link link 类型：
 
-    String messageUrl
-    String picUrl
+    String messageUrl // 消息链接
+    String picUrl // 图片上传后的media_id
     String text
     String title
     
@@ -50,25 +50,25 @@ Markdown markdown 类型：
 OA oa 类型：
 
     Head head
-        String bgcolor; // 背景颜色
-        String text;
+        String bgcolor; // 头部背景颜色
+        String text; // 头部文字
     Body body
         String author;
         String content;
-        String file_count;
+        String file_count; // 附件数，自定义不做校验
         Form form;
             String key;
             String value;
-        String image;
-        Rich rich;
-            String num;
-            String unit;
+        String image; // 上传之后的media_id
+        Rich rich; // 单行富文本
+            String num; // 数字：15.6
+            String unit; // 单位：元
         String title;
     String message_url // 设置手机端可以打开链接
     String pc_message_url // 设置PC端可以打开链接
-    StatusBar status_bar
-        String status_bg;
-        String status_value;
+    StatusBar status_bar // 状态节点
+        String status_bg; // 文字颜色
+        String status_value; // 节点值：进行中，结束...
 
 -
 Text text 类型：
@@ -78,7 +78,7 @@ Text text 类型：
 +
 Voice voice 类型：
     
-    String duration;
+    String duration; // 正整数-音频时长（单位）不超过60
     String media_id;
 
 !!!
